# ResearchWorkbench

./: .gitattributes  .gitignore  AGENTS.md  OPEN_SOURCE.md  README.md  public-export.json  pyproject.toml
.agents/: .gitignore
.agents/skills/archive-arxiv-recommendations/: SKILL.md
.agents/skills/archive-arxiv-recommendations/scripts/: archive_recommendations.py  run_archive.ps1  run_archive.sh
.agents/skills/arxiv-daily/: .gitignore  SKILL.md  config.template.yaml
.agents/skills/arxiv-daily/assets/: daily-digest-template.md  recommended-template.md
.agents/skills/arxiv-daily/scripts/: fetch_arxiv.py  prepare_batches.py  run_fetch.sh  run_prepare_batches.ps1
.agents/skills/formula-fix/: SKILL.md
.agents/skills/formula-fix/assets/: llm-formula-fix-prompt-template.md
.agents/skills/markdown-fix/: SKILL.md
.agents/skills/markdown-fix/assets/: llm-markdown-fix-prompt-template.md
.agents/skills/paper-extract/: SKILL.md
.agents/skills/paper-extract/assets/: llm-postprocess-prompt-template.md
.agents/skills/paper-extract/scripts/: download_arxiv.py  extract_pdf.py  llm_postprocess.py  markdown_cleanup.py  pdf_backends.py  run_download_arxiv.ps1  run_extract_pdf.sh
.agents/skills/paper-note/: SKILL.md
.agents/skills/paper-reader/: SKILL.md
.agents/skills/paper-reader/scripts/: extract_pdf.py
.agents/skills/paper-translate/: SKILL.md
.claude/skills/arxiv-daily/: SKILL.md
.claude/skills/paper-reader/: SKILL.md
papers/: README.md
scripts/: build_paper_index.py  export_public_repo.py  generate_paper_files.py  paper-reading-prompt.template.md
(+7 files in other folders)
